Fix wrapped slug header, add activity, add test

--- a/frontend/components/DataSet/_styles.scss
+++ b/frontend/components/DataSet/_styles.scss
@@ -17,6 +17,7 @@
     font-weight: $bold;
     display: flex;
     gap: $pad-xsmall; // For deprecated sandbox icons
+    white-space: nowrap;
   }
 
   dd {
